updated animation loops

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -358,7 +358,22 @@
                <div id="animationParamsConfig" class="config-section" style="display:none;">
                    <label for="objAnimationDuration">Duration (ms):</label> <input type="number" id="objAnimationDuration" min="100" step="50" value="500"><br>
                    <label for="objAnimationStrength">Strength:</label> <input type="number" id="objAnimationStrength" step="0.1" value="5"> <span id="objAnimationStrengthUnit" style="font-size:0.8em; margin-left:5px;">(pixels/degrees/scale)</span>
-               </div>
+
+                   <label for="objAnimationLoop">Loop:</label>
+                   <select id="objAnimationLoop" class="sidebar-input">
+                       <option value="false">No</option>
+                       <option value="true">Yes (Infinite)</option>
+                       <option value="count">Fixed Count</option>
+                   </select><br>
+
+                   <div id="animationLoopCountConfig" style="display:none;">
+                       <label for="objAnimationLoopCount">Loop Count:</label>
+                       <input type="number" id="objAnimationLoopCount" class="sidebar-input" min="1" value="3"><br>
+                   </div>
+
+                   <label for="objAnimationLoopDelay">Loop Delay (ms):</label>
+                   <input type="number" id="objAnimationLoopDelay" class="sidebar-input" min="0" step="50" value="100">
+                </div>
             </div>
 
             <div id="fontFamilyPopover" class="toolbar-popover">
