--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -244,6 +244,7 @@
         border: none;
         padding: 8px 15px;
         cursor: pointer;
+        color: #666;
         font-size: 14px;
         opacity: 0.7;
         transition: all 0.2s;
@@ -253,6 +254,7 @@
       .media-tab-btn.active {
         opacity: 1;
         border-bottom: 2px solid #007bff;
+        color: #fff;
         font-weight: bold;
       }
 
