fixed hover trigger for animations

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -596,7 +596,7 @@
 
             <div id="animationPopover" class="toolbar-popover">
                <h4>Animations</h4>
-               <label for="objAnimationTrigger">Anim. Trigger:</label> <select id="objAnimationTrigger"><option value="">None</option><option value="onLoad">On Slide Load</option><option value="onHover">On Hover</option><option value="onClick">On Click</option></select><br>
+               <label for="objAnimationTrigger">Anim. Trigger:</label> <select id="objAnimationTrigger"><option value="">None</option><option value="onLoad">On Slide Load</option><option value="Hover">On Hover</option><option value="onClick">On Click</option></select><br>
                <label for="objAnimationType">Anim. Type:</label> <select id="objAnimationType"><option value="">None</option><option value="wiggle">Wiggle</option><option value="float">Float</option><option value="growShrink">Grow/Shrink</option></select><br>
                <div id="animationParamsConfig" class="config-section" style="display:none;">
                    <label for="objAnimationSpeed">Speed:</label>
